--- a/package.json
+++ b/package.json
@@ -1,15 +1,46 @@
 {
   "name": "react-simple",
+  "author": "Nicolás Serrano",
+  "license": "ISC",
   "version": "1.0.0",
   "description": "A React simple boilerplate",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
+    "repository": {
     "type": "git",
     "url": "https://ncltrdorsor.visualstudio.com/Development/_git/react-simple"
   },
-  "author": "Nicolás Serrano",
-  "license": "ISC"
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server",
+    "build": "webpack",
+    "dev-v2": "webpack-dev-server --hot --progress --inline --colors --host localhost --port 8080 --config webpack/webpack.dev.config.js",
+    "build-v2": "webpack --config webpack/prod.config.js"
+  },
+  "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "cssnano": "^3.7.3",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "whatwg-fetch": "^1.0.0"
+  }
 }
